# presburger

./: .gitignore  _CoqProject  dune-project  presburger.opam
theories/: Cong.v  Elim.v  Factor.v  Form.v  GroundN.v  Lift.v  Normal.v  Process.v  ReduceCong.v  ReduceEq.v  Sort.v  Zdivides.v  dune
